--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -3,3 +3,9 @@ brijesh:
   last_name: "Bharadwaj"
   email: "brijesh.v.bharadwaj@gmail.com"
   profile_name: "brijesh"
+
+neha:
+  first_name: "Neha"
+  last_name: "Kumari"
+  email: "neha@nilenso.com"
+  profile_name: "neha"
