--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -3,6 +3,7 @@ brijesh:
   last_name: "Bharadwaj"
   email: "brijesh.v.bharadwaj@gmail.com"
   profile_name: "brijesh"
+  encrypted_password: "$2a$10$Fh/Hm8RxDsuPTeBUr6864.GARlcmt7zF2WspaXGr3BIv2C27N.osq"
 
 neha:
   first_name: "Neha"
